--- a/style.css
+++ b/style.css
@@ -1,27 +1,61 @@
 body {
-  margin: 0;
-  padding: 0;
-
-  font: 400 1.3rem 'Helvetica', sans-serif;
+  font-family: Helvetica;
+  font-weight: bold;
 }
 
 .layout {
-  
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-template-columns: repeat(auto-fit, 200px);
+  grid-gap: 10px;
 }
 
 .layout-lista {
+  align-self: start;
   background-color: lightgray;
+  display: grid;
+  border-radius: 4px;
 }
 
 .lista-cartao {
   background-color: ghostwhite;
+  background: ghostwhite;
+  display: grid;
+  box-sizing: border-box;
+  margin: 6px;
+  border-radius: 4px;
+  
+  padding: 8px;
+  
+  transition: all .3s ease;
 }
 
-.cartao-texto {
-
+.lista-cartao:hover {
+    transform: scale(1.03);
 }
+
+.lista-cartao:active {
+    transform: scale(1.03) rotate(2deg);
+  }
+  
+  .lista-cartao:last-child {
+    .cartao {
+      &-data {
+        background: limegreen;
+      }
+    } 
+  
+}
+
+
 
 .cartao-data {
-
+  font-size: 12px;
+  background-color: red;
+  color: white;
+  border-radius: 4px;
+  padding: 2px 4px;
+  width: 50px;
+  text-align: center;
 }
 
